--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -86,6 +86,7 @@ window.onload = function () {
 
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
+      <a href="https://www.patreon.com/bePatron?u=603173" data-patreon-widget-type="become-patron-button">Become a Patron!</a><script async src="https://c6.patreon.com/becomePatronButton.bundle.js"></script>
       <a href="http://www.askowl.net/unity-packages" target="askowl">
           <img src="/images/Askowl-400x400.png" style="float:right;width:150px;margin-right:50px;"/>
       </a>
